Release Notes

* 7/3/2017
  * considering maxNumFiles in getAtom
  * added AES_NESCONSUMERS and AES_NESCONSUMERS
  * changed AtlasPJB to skip opportunistic sites for high prio jobs
  * enabled automatic AES task conversion

* 6/27/2017
  * added getNumUnprocessedEvents_JEDI

* 6/26/2017
  * skip scouts for ES
  * ES without ueRealNumEvt or nEventsPerFile
  * WQ-GS alignment

* 5/17/2017
  * changed nRunningCap to ignore highPrioWaiting in AtlasPJT

* 5/12/2017
  * setting nEsConsumers=1 etc for esFraction

* 5/8/2017
  * added nSimEvents

* 5/4/2017
  * fixed AtlasAJB for AtnalysisBase
  * fixed getAvailableFiles

* 5/3/2017
  * added JediDBProxyFiltered
  * added inFilePosEvtNum

* 5/2/2017
  * changed AtlasPJB for unified PQs

* 4/28/2017
  * fixed brokerage for git rel

* 4/25/2017
  * fake co-jumbo

* 4/24/2017
  * resource_type tagging

* 4/14/2017
  * added noExecStrCnv

* 4/11/2017
  * added throttleJobsInPausedTasks

* 4/5/2017
  * added pseudo output dataset

* 3/27/2017
  * changed AtlasAPP to extend lifetime of user output datasets

* 3/2/2017
  * added esFraction

* 2/22/2017
  * fixed generateBuildJob for nightlies
  * changed AtlasTS to make duble copy for users

* 2/20/2017
  * changed AtlasPTB for task.nucleus=satellite
  * added respectSplitRule
  * added indexConsistent

* 2/7/2017
  * added DISK_THRESHOLD_xyz in AtlasPTB

* 1/31/2017
  * removed dq2 dependency
  * changed not to change oldstatus when throttled->paused
  * fixed eventRatio for nSecond % nMaster != 0

* 1/13/2017
  * introduced GROUPBYATTR in getTasksToBeProcessed

* 1/12/2017
  * fixed for incexec with input containers

* 12/20/2016
  * changed setScoutJobData to set exhausted when task_ramCount<4GB and scout_ramCount>4GB

* 12/15/2016
  * added nQueueCap
  * added mergeEsAtOS

* 12/9/2016
  * added nRunningCap to AtlasPJT
  * disabled setDEL in AtlasPP

* 12/5/2016
  * increased scout priority to 901

* 12/1/2016
  * changed AtlasPWD to boost task priorities at 95%